Add properties which we can test.

--- a/coffee_machine/Makefile
+++ b/coffee_machine/Makefile
@@ -1,6 +1,9 @@
 LTS := coffee_machine_1.lts coffee_machine_2.lts
 
-all: $(LTS)
+PROPERTIES_MCF := $(wildcard properties/*.mcf)
+PROPERTIES_PBES := $(patsubst %.mcf, %.coffee_machine_1.pbes, $(PROPERTIES_MCF)) $(patsubst %.mcf, %.coffee_machine_2.pbes, $(PROPERTIES_MCF))
+
+all: $(LTS) $(PROPERTIES_PBES)
 
 .PRECIOUS: %.lps
 %.lps: %.mcrl2
@@ -19,6 +22,16 @@ graph: $(LTS)
 bisim: $(LTS)
 	ltscompare --equivalence=bisim --tau=insert_coin,choose_coffee,choose_tea,pour_tea,pour_coffee $^
 
+%.coffee_machine_1.pbes: coffee_machine_1.lps
+	lps2pbes -f  $(patsubst %.coffee_machine_1.pbes, %.mcf, $@) $^ $@
+
+%.coffee_machine_2.pbes: coffee_machine_2.lps
+	lps2pbes -f  $(patsubst %.coffee_machine_2.pbes, %.mcf, $@) $^ $@
+
+.PHONY: properties
+properties: $(PROPERTIES_PBES)
+	for property in $^; do pbes2bool -v "$$property"; done
+
 .PHONY: clean
 clean:
-	$(RM) *.lps *.lts
+	$(RM) *.lps *.lts */*.pbes
